cilium-demos/runtime-security-incident/incident-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pacman-incident-demo
  labels:
    app.kubernetes.io/name: pacman
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: pacman-cilium-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pacman
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pacman
        app.kubernetes.io/component: web
        app.kubernetes.io/part-of: pacman-cilium-demo
    spec:
      containers:
        - name: pacman
          image: docker.io/saintdle/pacman@sha256:4de4f422b5edb49b606055525c5dc29c3824446f401f6ece241d7ae6302d1fca
          ports:
            - name: http
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: pacman-incident-demo
spec:
  selector:
    app.kubernetes.io/name: pacman
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 8080
      targetPort: http
