cilium-demos/runtime-security-incident/incident-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pacman-incident-egress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: web
  egress:
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
